force-app/main/default/objects/Card__c/Card__c.object-meta.xml
<CustomObject>
    <description>A Card representing a Profile</description>
    <label>Card</label>
    <nameField>
        <label>Full Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Cards</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>