force-app/main/default/objects/Card__c/fields/Feats_of_Strength__c.field-meta.xml
<CustomField>
    <fullName>Feats_of_Strength__c</fullName>
    <inlineHelpText
  >Enter your feats of strength separated by a comma</inlineHelpText>
    <label>Feats of Strength</label>
    <type>TextArea</type>
</CustomField>