force-app/main/default/objects/Card__c/fields/GitHub_Username__c.field-meta.xml
<CustomField>
    <fullName>GitHub_Username__c</fullName>
    <label>GitHub Username</label>
    <length>255</length>
    <type>Text</type>
</CustomField>