force-app/main/default/objects/Card__c/fields/Main_Website__c.field-meta.xml
<CustomField>
    <fullName>Main_Website__c</fullName>
    <label>Main Website</label>
    <type>Url</type>
</CustomField>