force-app/main/default/objects/Card__c/fields/Picture__c.field-meta.xml
<CustomField>
    <fullName>Picture__c</fullName>
    <formula
  >IMAGE(Picture_Path__c, &quot;Card Picture&quot;, 100, 100)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Picture</label>
    <type>Text</type>
</CustomField>