force-app/main/default/objects/Card__c/fields/Picture_Content_Version_ID__c.field-meta.xml
<CustomField>
    <fullName>Picture_Content_Version_ID__c</fullName>
    <formula>RIGHT(Picture_Path__c, 18)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Picture Content Version ID</label>
    <type>Text</type>
</CustomField>