force-app/main/default/objects/Card__c/fields/Share_Card__c.field-meta.xml
<CustomField>
    <fullName>Share_Card__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText
  >This links your card to other cards with the same stickers so people can find you</inlineHelpText>
    <label>Make my card discoverable</label>
    <type>Checkbox</type>
</CustomField>