force-app/main/default/objects/Card__c/fields/Twitter_Username__c.field-meta.xml
<CustomField>
    <fullName>Twitter_Username__c</fullName>
    <label>Twitter Username</label>
    <length>255</length>
    <type>Text</type>
</CustomField>