force-app/main/default/objects/Card__c/fields/Webring__c.field-meta.xml
<CustomField>
    <fullName>Card__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Card</label>
    <referenceTo>Card__c</referenceTo>
    <relationshipLabel>Websites</relationshipLabel>
    <relationshipName>Websites</relationshipName>
    <type>Lookup</type>
</CustomField>