force-app/main/default/objects/Card__c/validationRules/Validate_htttp_or_https_URL.validationRule-meta.xml
<ValidationRule>
    <fullName>Validate_htttp_or_https_URL</fullName>
    <active>true</active>
    <description
  >Validates that a field begins with either http:// or https:// (blank allowed too)</description>
    <errorConditionFormula
  >NOT(OR(BEGINS(Main_Website__c, &quot;http://&quot;),BEGINS(Main_Website__c, &quot;https://&quot;),ISBLANK(Main_Website__c)))</errorConditionFormula>
    <errorDisplayField>Main_Website__c</errorDisplayField>
    <errorMessage>Please start URL with http:// or https://</errorMessage>
</ValidationRule>